--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "serve": "next start",
     "analyze": "cross-env ANALYZE=true next build",
     "lint": "next lint --fix --dir pages --dir app --dir components --dir lib --dir layouts --dir scripts",
-    "prepare": "husky"
+    "prepare": "husky",
+    "fontsubset": "npx zx scripts/fontsubset/fontsubset.mjs"
   },
   "dependencies": {
     "@headlessui/react": "1.7.19",
@@ -60,7 +61,8 @@
     "lint-staged": "^13.0.0",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.5.11",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "zx": "^8.1.9"
   },
   "lint-staged": {
     "*.+(js|jsx|ts|tsx)": [
