--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "fontmin": "^1.1.0",
     "husky": "^9.0.0",
     "lint-staged": "^13.0.0",
     "prettier": "^3.0.0",
