feat: add frontmatter generation script and update dependencies

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "next lint --fix --dir pages --dir app --dir components --dir lib --dir layouts --dir scripts",
     "prepare": "husky",
     "fontsubset": "npx zx scripts/fontsubset/fontsubset.mjs",
-    "obsidian-sync": "npx zx scripts/obsidian-sync/index.mjs"
+    "obsidian-sync": "npx zx scripts/obsidian-sync/index.mjs",
+    "generate-frontmatter": "npx zx scripts/obsidian-sync/generate-frontmatter.mjs ./data/blog"
   },
   "dependencies": {
     "@headlessui/react": "1.7.19",
@@ -67,6 +68,7 @@
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "typescript": "^5.1.3",
+    "yaml": "^2.7.0",
     "zx": "^8.1.9"
   },
   "lint-staged": {
